correction mobile

--- a/css/style.css
+++ b/css/style.css
@@ -27,18 +27,17 @@ body {
 
 #nav-container {
   background: #3b94e0;
+  height: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 3rem; }
 
 h1 {
-  -ms-flex-item-align: center;
-  align-self: center;
   color: #eee;
   text-align: left;
   font-size: 4rem;
-  padding: 3px 15px;
+  padding-left: 15px;
   width: 50%;
   border-bottom: 2px solid #eee; }
   h1:hover {
